--- a/ModelGraph/ModelGraph/Views/MainPage.xaml
+++ b/ModelGraph/ModelGraph/Views/MainPage.xaml
@@ -15,14 +15,15 @@
         </Style>
 
     </Page.Resources>
+    
     <Grid
         x:Name="ContentArea">
         <Grid
             Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
             <StackPanel>
                 <StackPanel Margin="5">
-                    <Button Name ="New" Style="{StaticResource ButtonStyle}" x:Uid="_100" Click="NewButton_Click"></Button>
-                    <Button Name ="Open" Style="{StaticResource ButtonStyle}" x:Uid="_101" Click="OpenButton_Click"></Button>
+                    <Button Name ="New" Style="{StaticResource ButtonStyle}" x:Uid="MainPage_NewButton" Click="NewButton_Click"></Button>
+                    <Button Name ="Open" Style="{StaticResource ButtonStyle}" x:Uid="MainPage_OpenButton" Click="OpenButton_Click"></Button>
                 </StackPanel>
             </StackPanel>
 
