--- a/ModelGraph/ModelGraph/Views/ShellPage.xaml
+++ b/ModelGraph/ModelGraph/Views/ShellPage.xaml
@@ -37,7 +37,7 @@
                 </winui:NavigationViewItem.Icon>
             </winui:NavigationViewItem>
         </winui:NavigationView.MenuItems>
-        <i:Interaction.Behaviors>
+        <!--<i:Interaction.Behaviors>
             <behaviors:NavigationViewHeaderBehavior
                 DefaultHeader="{x:Bind Selected.Content, Mode=OneWay}">
                 <behaviors:NavigationViewHeaderBehavior.DefaultHeaderTemplate>
@@ -51,7 +51,7 @@
                     </DataTemplate>
                 </behaviors:NavigationViewHeaderBehavior.DefaultHeaderTemplate>
             </behaviors:NavigationViewHeaderBehavior>
-        </i:Interaction.Behaviors>
+        </i:Interaction.Behaviors>-->
         <Grid>
             <Frame x:Name="shellFrame" />
         </Grid>
