--- a/ModelGraph/ModelGraph/Controls/ModelTree/ModelTreeControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/ModelTree/ModelTreeControl.xaml
@@ -11,7 +11,7 @@
 
     <Page.Resources>
         <x:Double x:Key="LevelIndent">20</x:Double>
-        <x:Double x:Key="ElementHieght">24</x:Double>
+        <x:Double x:Key="ElementHieght">32</x:Double>
 
         <Style x:Key="TitleStyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="16" />
@@ -93,9 +93,10 @@
 
         <Style x:Key="TextPropertyStyle" TargetType="TextBox">
             <Setter Property="MinHeight" Value="{StaticResource ElementHieght}"/>
-            <Setter Property="Padding" Value="10,0,6,0"/>
+            <Setter Property="Padding" Value="10,4,6,0"/>
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="FontWeight" Value="Normal" />
+            <Setter Property="FontSize" Value="16" />
             <Setter Property="Foreground" Value="Black" />
             <Setter Property="Margin" Value="2,0,4,0" />
             <Setter Property="TextAlignment" Value="Left"/>
