Fixed TreeModel scrolling errors

--- a/ModelGraph/ModelGraph/Controls/ModelTree/ModelTreeControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/ModelTree/ModelTreeControl.xaml
@@ -632,7 +632,7 @@
 
         <Grid Grid.Row="1" x:Name="ControlGrid" >
             <Canvas x:Name="TreeCanvas" Style="{StaticResource TreeCanvasStyle}" PointerPressed="TreeGrid_PointerPressed" PointerWheelChanged="TreeCanvas_PointerWheelChanged">
-                <Grid x:Name="SelectGrid" Width="{Binding ElementName=TreeCanvas, Path=ActualWidth}" Height="{StaticResource ElementHieght}" Background="#FFD8EFF9" >
+                <Grid x:Name="SelectorGrid" Width="{Binding ElementName=TreeCanvas, Path=ActualWidth}" Height="{StaticResource ElementHieght}" Background="#FFD8EFF9" >
                     <Button x:Name="FocusButton" Style="{StaticResource FocusButtonStyle}" >
                         <Button.KeyboardAccelerators>
                             <KeyboardAccelerator Key="PageUp" Invoked="KeyPageUp_Invoked"/>
